Add Go Implementation

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,12 @@
 .git/
+.github/
 node_modules/*
-src/**/__tests__/*
+src/
 tools/
 
+LICENSE.MIT
 .eslintignore
 .eslintrc.js
 Makefile
+package.json
+yarn.lock
